--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,6 +35,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./data/traefik/letsencrypt:/letsencrypt
+    restart: unless-stopped
     networks:
       - proxy
 
@@ -60,7 +61,6 @@ services:
     volumes:
       - ./data/homepage/config:/app/config
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    restart: always
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
@@ -72,6 +72,7 @@ services:
       - "traefik.http.routers.homepage.rule=Host(`${DOMAIN}`)"
       - "traefik.http.routers.homepage.service=homepage"
       - "traefik.http.services.homepage.loadbalancer.server.port=3000"
+    restart: unless-stopped
     networks:
       - proxy
       - docker-proxy
@@ -103,6 +104,7 @@ services:
     image: jellyfin/jellyfin
     container_name: jellyfin
     user: ${PUID}:${PGID}
+    restart: unless-stopped
     networks:
       - proxy
     volumes:
@@ -111,7 +113,6 @@ services:
       - type: bind
         source: ./library
         target: /library
-    restart: "unless-stopped"
     environment:
       - JELLYFIN_PublishedServerUrl=https://jellyfin.${DOMAIN}
     labels:
@@ -196,6 +197,7 @@ services:
     volumes:
       - ./data/qbittorrent:/config
       - ./library:/library
+    restart: unless-stopped
     network_mode: "service:gluetun"
     depends_on:
       - gluetun
