Revert "restart gluetun always"
This reverts commit 3c2c59db6cd01c39a22c74c7041459a067bd2cac.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -149,7 +149,7 @@ services:
       - NET_ADMIN
     devices:
       - /dev/net/tun
-    restart: always
+    restart: unless-stopped
     networks:
       - proxy
     labels:
