--- a/data/recyclarr/configs/anime.yml
+++ b/data/recyclarr/configs/anime.yml
@@ -16,7 +16,7 @@ sonarr:
 
     include:
       # Comment out any of the following includes to disable them
-      - template: sonarr-quality-definition-anime
+      # - template: sonarr-quality-definition-anime
       - template: sonarr-v4-quality-profile-anime
       - template: sonarr-v4-custom-formats-anime
 
