--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,11 @@ API_KEY_SONARR=
 API_KEY_RADARR=
 API_KEY_JELLYFIN=
 API_KEY_JELLYSEERR=
+
+# karakeep
+NEXTAUTH_SECRET=
+MEILI_MASTER_KEY=
+OPENAI_API_KEY=
+
+# glance
+GLANCE_LOCATION="San Fransisco, CA, United States"
