commit homepage config

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,8 @@ API_KEY_SONARR=
 API_KEY_RADARR=
 API_KEY_JELLYFIN=
 API_KEY_JELLYSEERR=
+QBT_USERNAME=
+QBT_PASSWORD=
 
 # karakeep
 NEXTAUTH_SECRET=
