--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,18 +42,15 @@ services:
     networks:
       - proxy
 
-  dockerproxy:
+  docker-proxy:
     image: ghcr.io/tecnativa/docker-socket-proxy:latest
-    container_name: dockerproxy
     environment:
       - CONTAINERS=1 # Allow access to viewing containers
       - SERVICES=1 # Allow access to viewing services (necessary when using Docker Swarm)
       - TASKS=1 # Allow access to viewing tasks (necessary when using Docker Swarm)
       - POST=0 # Disallow any POST operations (effectively read-only)
-    ports:
-      - 127.0.0.1:2375:2375
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     restart: unless-stopped
     networks:
       - docker-proxy
@@ -62,9 +59,8 @@ services:
     image: ghcr.io/gethomepage/homepage:latest
     container_name: homepage
     volumes:
-      - ./data/homepage/config:/app/config
+      - ./config/homepage:/app/config
       - ./library:/mnt/library
-      - /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
@@ -100,7 +96,7 @@ services:
       - "homepage.icon=jellyseerr.png"
       - "homepage.href=https://jellyseerr.${DOMAIN}"
       - "homepage.description=Request shows & movies"
-      - "homepage.weight=4"
+      - "homepage.weight=10"
       - "homepage.widget.type=jellyseerr"
       - "homepage.widget.url=https://jellyseerr.${DOMAIN}"
       - "homepage.widget.key=${API_KEY_JELLYSEERR}"
@@ -132,7 +128,7 @@ services:
       - "homepage.icon=jellyfin.png"
       - "homepage.href=https://jellyfin.${DOMAIN}"
       - "homepage.description=Watch shows & movies"
-      - "homepage.weight=4"
+      - "homepage.weight=5"
       - "homepage.widget.type=jellyfin"
       - "homepage.widget.url=https://jellyfin.${DOMAIN}"
       - "homepage.widget.key=${API_KEY_JELLYFIN}"
@@ -210,12 +206,16 @@ services:
     depends_on:
       - gluetun
     labels:
-      - "homepage.group=Downloads"
+      - "homepage.group=Media"
       - "homepage.name=Qbittorrent"
       - "homepage.icon=qbittorrent.png"
       - "homepage.href=https://qbt.${DOMAIN}"
       - "homepage.description=Torrent downloader"
-      - "homepage.weight=1"
+      - "homepage.weight=15"
+      - "homepage.widget.type=qbittorrent"
+      - "homepage.widget.url=https://qbt.${DOMAIN}"
+      - "homepage.widget.username=${QBT_USERNAME}"
+      - "homepage.widget.password=${QBT_PASSWORD}"
 
   flaresolverr:
     # DockerHub mirror flaresolverr/flaresolverr:latest
@@ -245,12 +245,12 @@ services:
     volumes:
       - ./data/prowlarr/config:/config
     labels:
-      - "homepage.group=Media Collectors"
+      - "homepage.group=Media"
       - "homepage.name=Prowlarr"
       - "homepage.icon=prowlarr.png"
       - "homepage.href=https://prowlarr.${DOMAIN}"
       - "homepage.description=Indexers management"
-      - "homepage.weight=4"
+      - "homepage.weight=20"
       - "homepage.widget.type=prowlarr"
       - "homepage.widget.url=https://prowlarr.${DOMAIN}"
       - "homepage.widget.key=${API_KEY_PROWLARR}"
@@ -271,12 +271,12 @@ services:
       - ./library:/library
       - ./library/downloads:/downloads
     labels:
-      - "homepage.group=Media Collectors"
+      - "homepage.group=Media"
       - "homepage.name=Radarr"
       - "homepage.icon=radarr.png"
       - "homepage.href=https://radarr.${DOMAIN}"
       - "homepage.description=Movie downloader"
-      - "homepage.weight=4"
+      - "homepage.weight=20"
       - "homepage.widget.type=radarr"
       - "homepage.widget.url=https://radarr.${DOMAIN}"
       - "homepage.widget.key=${API_KEY_RADARR}"
@@ -297,12 +297,12 @@ services:
       - ./library:/library
       - ./library/downloads:/downloads
     labels:
-      - "homepage.group=Media Collectors"
+      - "homepage.group=Media"
       - "homepage.name=Sonarr"
       - "homepage.icon=sonarr.png"
       - "homepage.href=https://sonarr.${DOMAIN}"
       - "homepage.description=TV downloader"
-      - "homepage.weight=4"
+      - "homepage.weight=20"
       - "homepage.widget.type=sonarr"
       - "homepage.widget.url=https://sonarr.${DOMAIN}"
       - "homepage.widget.key=${API_KEY_SONARR}"
